  - Handle hypopg unsupported access methods in dataabase wizard (Julien
    Rouhaud, thanks to Adrien Di Mascio for the report)
  - Fix compatibility with SQLAlchemy 1.3+ (Julien Rouhaud, thanks to github
    user mchubby and irc user ChOcO-Bn for the report)
  - Fix query detail if no data is found on the selected range (Julien Rouhaud,
    thanks to irc user ChOcO-Bn for the report)
3.2.0:
  - Add support for pg_wait_sampling to display wait events statistics and
    graphs, require pg9.6+ (Julien Rouhaud)
  - Show a sorted list of servers on login screen (meikomeik)
  - Add category to the list of column in the config overview page (Julien
    Rouhaud, thanks to Nehemiah I. Dacres for the feature request)
  - New breadcrumb and many other UI improvements (Pierre Giraud)
  - Fix behavior when changing time interval and then changing back to last
    hour (Julien Rouhaud, reported by Thomas Reiss)
  - Allow both "user" and "username" in configuration files (Julien Rouhaud)
3.1.4:
  - Export all data in csv export (thanks to jdeshayes for the feature request)
  - Reword double negation, thanks to Pierre Giraud for noticing
3.1.3:
  - Fix wrong calculation of microseconds difference (thanks to Eric Champigny)
3.1.2:
  - Fix I/O time unit on overview dashboard
  - Fix problem with explain queries (thanks to dblugeon)
  - Cosmetic changes to CPU time
3.1.1:
  - Detect powa-archivist / powa-web incompatibility
  - Handle quals which are not optimizable at all
  - Fix grid rendering.
  - Change default sorting order to DESC
  - Change default sort order on query page to duration desc
  - Use the time interval when rendering urls in Grids
  - Propagate updatePeriod on zoom to picker
  - Add export to CSV feature on grid
  - Fix case when quals dont belong to the same rel
  - Ignore errors while getting hypoplans
3.1.0:
  - Fix figures in query details, thanks to Eric Champigny for the patch
  - Fix graphs to display local time instead of UTC time